--- a/package.json
+++ b/package.json
@@ -50,5 +50,6 @@
   "devDependencies": {
     "jwt-decode": "^4.0.0",
     "tailwindcss": "^3.4.17"
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
